--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -17,6 +17,11 @@
 
   "options_page": "options.html",
 
+  "options_ui": {
+    "page": "options.html",
+    "chrome_style": true
+  },
+
   "commands": {
     "_execute_browser_action": {
       "suggested_key": {
