--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,7 +7,8 @@
   "incognito": "split",
 
   "permissions": [
-    "http://localhost/"
+    "http://localhost/",
+    "storage"
     ],
 
   "browser_action": {
