--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
 
-  "name": "Quick Dictionary",
-  "description": "Quick Dictionary extension (add more).", //TODO
+  "name": "Smart Translate",
+  "description": "Smart Translate extension (add more).", //TODO
   "version": "1.0",
   "incognito": "split",
 
@@ -11,8 +11,12 @@
     "storage"
     ],
 
+  "icons": { "16": "img/icon16.png",
+             "48": "img/icon48.png",
+             "128": "img/icon128.png" },
+
   "browser_action": {
-    // "default_icon": "icon.png", TODO
+    "default_icon": "img/icon16.png",
     "default_popup": "popup.html"
   },
 
